   * integral properties (.min, .max) float properties(.infinity, .nan, etc.), object properties (.classinfo).
   * static/dynamic array properties (.ptr, .length, .dup, etc.).
   * The type of bool/char/integral/floating/string/array literals. (Not map array though) 
 * Implemented: Code Completion now resolves parentheses expression. Auto declarations (resolve to initializer).

== DDT 0.8.0 (2013-08-30) ==
 * Updated DDT to latest version of DLTK (version 5.0, from Eclipse Kepler).
 * Changed: In DDoc view, the text of undefined macros now remains unmodified, instead of being replaced by empty text.
   * Example: _{{{My $(NO_SUCH_MACRO undefined) macro}}}_ will render as _{{{My $(NO_SUCH_MACRO undefined) macro}}}_ instead of _{{{My  macro}}}_.
 * Added: In DDoc view, added predefined DDoc macro: _{{{D}}}_. Works the same as _{{{D_CODE}}}_.
 * Implemented: Code Completion now presents language primitive results (void, int, char, etc.).
 * Fixed unintended behavior regression in 0.7.0 where Code Completion would not show any results when invoked in certain type reference source contexts. Examples (♦ denotes location where CC would be invoked):
{{{
foo[♦]♦
foo[123]♦
foo!♦(♦)
const(foo)♦
}}} 
 * Improved Code Completion to work when invoked next or inside a keyword. Previously it worked on primitive type keywords only ({{{int}}}, {{{char}}}, etc. ). Examples:   
   {{{
char intro, intro2; in♦ // CC invoked here will offer 【intro, intro2】 as completions
class Foo { char intro } auto x = Foo.in♦ // CC invoked here will offer 【intro】 as completions
}}}
 * Fixed 0.7.0 regression bug in editor resolving functionality where a reference would not be found if the cursor was at the very end of the reference.
   * Affects: Open Definition, Open Definition hyperlinks, References search, DDoc view hovers.
 * Cleanup: new UI base icons for most D source elements. New icon for D search.