@@ -1,8 +1,14 @@
 package dtool.ast.expressions;
 
+import java.util.Collection;
+import java.util.Collections;
+
 import dtool.ast.ASTCodePrinter;
 import dtool.ast.ASTNodeTypes;
 import dtool.ast.IASTVisitor;
+import dtool.ast.definitions.DefinitionClass;
+import dtool.ast.definitions.INamedElement;
+import dtool.resolver.api.IModuleResolver;
 
 public class ExpSuper extends Expression {
 	
@@ -21,6 +27,20 @@ public class ExpSuper extends Expression {
 	@Override
 	public void toStringAsCode(ASTCodePrinter cp) {
 		cp.append("super");
+	}
+	
+	@Override
+	public Collection<INamedElement> findTargetDefElements(IModuleResolver moduleResolver, boolean findFirstOnly) {
+		DefinitionClass definitionClass = ExpThis.getClassNodeParent(this);
+		if(definitionClass == null) {
+			return null;
+		}
+		
+		INamedElement superClass = definitionClass.resolveSuperClass(moduleResolver);
+		if(superClass == null) {
+			return null;
+		}
+		return Collections.<INamedElement>singleton(superClass);
 	}
 	
 }
